Revision History
=================

-------------------------------------------------------------------------------
dcm4che 1.0.3 -  - Changes since dcm4che 1.0.2
-------------------------------------------------------------------------------
BUG FIXES:
org.dcm4cheri.data
+ Fix DcmStreamHandlerImpl#fragment (=> error writing encapsed pixel data)

ENHANCEMENTS:
dcm4che API:
+ add org.dcm4che.media.DirBuilder#getDirWriter()

-------------------------------------------------------------------------------
dcm4che 1.0.2 -  - Changes since dcm4che 1.0.1
-------------------------------------------------------------------------------
DISTRIBUTION:
+ demo -> samples
+ include javadoc

BUG FIXES:
org.dcm4cheri.data
+ Fix DcmObject.putUT (inserted element returned wrong vr(=UL))
+ Fix BaseDatasetImpl.calcLength (ArrayOutOfBoundsException if #groups=8^n)
org.dcm4che.imageio.plugins.DcmMetadataFormat*
  Add missing definitions for "pos" attribute of elements "elm", "item", "frag"
org.dcm4cheri.media:
+ Fix DirBuilderImpl to merge PATIENT/STUDY/SERIES records with
  same primary key
samples/dcmdir:
+ Fix remove operation (ArrayOutOfBoundsException)
+ Fix load of readme file configuration parameter

ENHANCEMENTS:
dcm4che API:
+ add org.dcm4che.data.DicomObject#vm(int)
dcmdir sample:
+ command -c create root directory, if no such directory exists
+ add command -P dir-file: purge records from existing DICOMDIR file,
  with referenced files do not exist anymore

CHANGES:
dcm4che API:
+ org.dcm4cheri.data.Dataset#subset -> #subSet: adjust method name and
  semantic according java.util.SortedSet#subSet
dcm4che Impl:
+ DcmImageReaderConf: change default resource location of properties from
  /resources/DcmImageReader.properties to /DcmImageReader.properties
samples:
+ change resource location of Resource Bundles from
  resources/BUNDLE.properties to BUNDLE.properties

-------------------------------------------------------------------------------