@@ -10,7 +10,10 @@ org.dcm4cheri.data
 
 ENHANCEMENTS:
 dcm4che API:
-+ add org.dcm4che.media.DirBuilder#getDirWriter()
++ add org.dcm4che.data.DcmObject#getDateRange
++ add org.dcm4che.data.DcmObject#getDateTimeRange
++ add org.dcm4che.data.DcmElement#getDateRange
++ add org.dcm4che.media.DirBuilder#getDirWriter
 
 -------------------------------------------------------------------------------
 dcm4che 1.0.2 -  - Changes since dcm4che 1.0.1
